# pal

./: .gitignore  Cargo.toml  README.md  build.rs
api/: Cargo.toml
api/src/: buffer.rs  command_buffer.rs  compute_pass.rs  compute_pipeline.rs  context.rs  descriptor_set.rs  graphics_pipeline.rs  lib.rs  queue.rs  render_pass.rs  shader.rs  surface.rs  texture.rs  types.rs
backends/vulkan/: Cargo.toml
backends/vulkan/src/: buffer.rs  command_buffer.rs  compute_pipeline.rs  descriptor_set.rs  graphics_pipeline.rs  lib.rs  queue.rs  render_pass.rs  shader.rs  surface.rs  texture.rs
backends/vulkan/src/util/: descriptor_pool.rs  garbage_collector.rs  mod.rs  pipeline_cache.rs  pipeline_tracker.rs  resource_state.rs  sampler_cache.rs  semaphores.rs  tracking.rs  usage.rs
examples/: blank_window.rs  complex.rs  performance.rs  textured_cube.rs  triangle.rs  uniform_buffer.rs  util.rs
src/: lib.rs
